<resources>

    <string name="app_name">iMusica</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="click_to_register">Click here to register</string>
    <string name="password_fail">Wrong password.</string>
    <string name="email_exists">This e-mail is not registered.</string>

    <!-- Register -->
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="invalid_email">Fill with a valid e-mail.</string>
    <string name="blank_email">E-mail cannot be blank.</string>
    <string name="blank_name">Name cannot be blank.</string>
    <string name="blank_password">Password cannot be blank.</string>
    <string name="password_dont_match">Passwords do not match.</string>
    <string name="register_success">Successfully registered.</string>
    <string name="email_already_registered">E-mail already registered.</string>

    <!-- Edit -->
    <string name="edit">Edit</string>
    <string name="edit_success">Successfully edited.</string>
    <string name="update_error">Error on data update.</string>
    <string name="no_changes">No changes made.</string>

    <!-- Delete -->
    <string name="delete">Delete</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_confirm">Are you sure want to delete this account?</string>
    <string name="delete_success">Account successfully deleted.</string>
    <string name="delete_error">Error on delete user account.</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logo">iMusica Logo</string>
    <string name="home">Home</string>
    <string name="language">Language</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <!-- Languages -->
    <string name="language_choice">Language choice</string>
    <string name="english">English</string>
    <string name="portuguese">Portuguese</string>

    <!-- Dialogs / Alerts -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="loading">Loading…</string>
    <string name="failure">Oops! Something went wrong.</string>
    <string name="okhttp">OkHttp</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="new_post">New Post</string>
    <string name="post">Post</string>
    <string name="divisor" translatable="false">/</string>

    <!-- Home -->
    <string name="posts" translatable="false">Posts</string>
    <string name="okhttp_failure">Failure on check URL.\nCheck URL address or your internet status.</string>
    <string name="retrofit_failure">Error on Retrofit2 response.</string>
    <string name="create_failure">Create post failure.\nTitle cannot be blank.</string>
    <string name="create_success">Successfully created post.</string>
    <string name="edit_post_success">Successfully updated post.</string>
    <string name="edit_failure">Edit post failure.\nTitle cannot be blank.</string>
    <string name="delete_post_success">Successfully deleted post.</string>

    <!-- Notification -->
    <string name="inactivity_title">Inactivity</string>
    <string name="inactivity_message">You had 20 seconds of inactivity.\nClick to reload all posts.</string>

</resources>