<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.language.LanguageFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.constraint.Guideline
            android:id="@+id/leftParentGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/leftGuideLine" />

        <android.support.constraint.Guideline
            android:id="@+id/rightParentGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/rightGuideLine" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="@dimen/CornerRadius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rightParentGuideLine"
            app:layout_constraintStart_toStartOf="@+id/leftParentGuideLine"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.constraint.Guideline
                    android:id="@+id/leftCardGuideLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="@dimen/leftGuideLine" />

                <android.support.constraint.Guideline
                    android:id="@+id/rightCardGuideLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="@dimen/rightGuideLine" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/language_choice"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/rightCardGuideLine"
                    app:layout_constraintStart_toStartOf="@+id/leftCardGuideLine"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnEnglish"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/button_accent_background"
                    android:text="@string/english"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toStartOf="@+id/rightCardGuideLine"
                    app:layout_constraintStart_toStartOf="@+id/leftCardGuideLine"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <Button
                    android:id="@+id/btnPortuguese"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/button_accent_background"
                    android:text="@string/portuguese"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/rightCardGuideLine"
                    app:layout_constraintStart_toStartOf="@+id/leftCardGuideLine"
                    app:layout_constraintTop_toBottomOf="@+id/btnEnglish" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</ScrollView>