<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.login.LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.constraint.Guideline
            android:id="@+id/leftParentGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/leftGuideLine" />

        <android.support.constraint.Guideline
            android:id="@+id/rightParentGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/rightGuideLine" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="@dimen/CornerRadius"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toStartOf="@+id/rightParentGuideLine"
            app:layout_constraintStart_toStartOf="@+id/leftParentGuideLine"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true">

                <android.support.constraint.Guideline
                    android:id="@+id/leftCardGuideLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="@dimen/leftGuideLine" />

                <android.support.constraint.Guideline
                    android:id="@+id/rightCardGuideLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="@dimen/rightGuideLine" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/rightCardGuideLine"
                    app:layout_constraintStart_toStartOf="@+id/leftCardGuideLine"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="4dp"
                        android:hint="@string/email"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/rightCardGuideLine"
                    app:layout_constraintStart_toStartOf="@+id/leftCardGuideLine"
                    app:layout_constraintTop_toBottomOf="@+id/layoutEmail"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="4dp"
                        android:hint="@string/password"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="24dp"
                    android:checked="true"
                    android:text="@string/remember"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/rightCardGuideLine"
                    app:layout_constraintStart_toStartOf="@+id/leftCardGuideLine"
                    app:layout_constraintTop_toBottomOf="@+id/layoutPassword" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/cardViewLogin"
            app:layout_constraintStart_toStartOf="@+id/cardViewLogin"
            app:layout_constraintTop_toBottomOf="@+id/cardViewLogin" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@null"
            android:text="@string/click_to_register"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>