<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.register.RegisterActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <android.support.constraint.Guideline
                android:id="@+id/leftParentGuideLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="@dimen/leftGuideLine" />

            <android.support.constraint.Guideline
                android:id="@+id/rightParentGuideLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="@dimen/rightGuideLine" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="@dimen/CornerRadius"
                app:layout_constraintEnd_toStartOf="@+id/rightParentGuideLine"
                app:layout_constraintStart_toStartOf="@+id/leftParentGuideLine"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="true">

                    <android.support.constraint.Guideline
                        android:id="@+id/leftCardGuideLine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="@dimen/leftGuideLine" />

                    <android.support.constraint.Guideline
                        android:id="@+id/rightCardGuideLine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="@dimen/rightGuideLine" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/layoutEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toStartOf="@+id/rightCardGuideLine"
                        app:layout_constraintStart_toStartOf="@+id/leftCardGuideLine"
                        app:layout_constraintTop_toTopOf="parent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/editTextEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_email"
                            android:drawablePadding="4dp"
                            android:hint="@string/email"
                            android:imeOptions="flagNoExtractUi"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/layoutName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toStartOf="@+id/rightCardGuideLine"
                        app:layout_constraintStart_toStartOf="@+id/leftCardGuideLine"
                        app:layout_constraintTop_toBottomOf="@+id/layoutEmail"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/editTextName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_person"
                            android:drawablePadding="4dp"
                            android:hint="@string/name"
                            android:imeOptions="flagNoExtractUi"
                            android:inputType="textPersonName"
                            android:maxLength="50"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/layoutPassword1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toStartOf="@+id/rightCardGuideLine"
                        app:layout_constraintStart_toStartOf="@+id/leftCardGuideLine"
                        app:layout_constraintTop_toBottomOf="@+id/layoutName"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/editTextPassword1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_lock"
                            android:drawablePadding="4dp"
                            android:hint="@string/password"
                            android:imeOptions="flagNoExtractUi"
                            android:inputType="textPassword"
                            android:maxLength="20"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/layoutPassword2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="32dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/rightCardGuideLine"
                        app:layout_constraintStart_toStartOf="@+id/leftCardGuideLine"
                        app:layout_constraintTop_toBottomOf="@+id/layoutPassword1"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/editTextPassword2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_lock"
                            android:drawablePadding="4dp"
                            android:hint="@string/confirm_password"
                            android:imeOptions="flagNoExtractUi"
                            android:inputType="textPassword"
                            android:maxLength="20"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>


                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/button_background"
                android:text="@string/register"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/cardViewLogin"
                app:layout_constraintStart_toStartOf="@+id/cardViewLogin"
                app:layout_constraintTop_toBottomOf="@+id/cardViewLogin" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>